welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:15: error: type mismatch;
 found   : Unit
 required: Boolean
if (a-b==0)
^