welcome.lessons.welcome.bat.bool1.LoneTeen.scala.code
def loneTeen(a:Int, b:Int):Boolean = {
if ((a>=13 && a<=19) && (b>=19 || b<=13))
{
	return true;
}

if ((b>=13 && b<=19) && (a>=19 || a<=13))
{
	return true;
}

else
{
	return false;
if (a-b==0)
{
	return false;
}
}


}